entity_macros/tests/ui/derive/ent/duplicate-last_updated.stderr
error: Already have a last_updated timestamp elsewhere
  --> $DIR/duplicate-last_updated.rs:17:11
   |
17 |     #[ent(last_updated)]
   |           ^^^^^^^^^^^^
