entity_macros/tests/ui/derive/ent/duplicate-last_updated.rs
use entity::{Ent, Id, WeakDatabaseRc};

#[derive(Clone, Ent)]
struct TestEnt {
    #[ent(id)]
    id: Id,

    #[ent(database)]
    database: WeakDatabaseRc,

    #[ent(created)]
    created: u64,

    #[ent(last_updated)]
    last_updated: u64,

    #[ent(last_updated)]
    last_updated2: u64,
}

fn main() {}
